--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,3 +1,7 @@
+upstream docker-wp {
+    server wordpress:8080;
+}
+
 server {
     listen 80;
     server_name example.org;
@@ -6,10 +10,7 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    return         301 https://$server_name$request_uri;
 }
 
 server {
@@ -23,9 +24,10 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://example.org;
+        proxy_pass  http://docker-wp;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Proto   https;
     }
 }
