--- a/nginx_initial.conf
+++ b/nginx_initial.conf
@@ -1,7 +1,3 @@
-upstream docker-wp {
-    server wordpress:80;
-}
-
 server {
     listen 80;
     server_name example.org;
@@ -10,7 +6,10 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-    return 301 https://$host$request_uri;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
@@ -24,10 +23,9 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://docker-wp;
+        proxy_pass  http://example.org;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-        proxy_set_header    X-Forwarded-Proto   https;
     }
 }
